# reverse

./: CMakeLists.txt
reverse/: board.cpp  board.h  main.cpp  player.cpp  player.h
